Fixed horizontal scrolling on mobile

--- a/dmz/src/main/resources/static/css/main.css
+++ b/dmz/src/main/resources/static/css/main.css
@@ -1,22 +1,24 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700);
 html,
 body {
+  width: 100%;
   height: 100%; }
 
 body {
   background-image: url('logo.png');
   background-size: 40px 28px;
-  background-position: 50px 60px;
+  background-position: 28px 30px;
   background-repeat: no-repeat;
-  padding-top: 150px;
+  padding-top: 100px;
   font-family: "Source Sans Pro", sans-serif;
   color: #2f2f2f; }
     @media (min-width: 992px) {
         body {
-      background-image: url('logo.png');
-  background-size: 40px 28px;
-  background-position: 100px 60px;
-  background-repeat: no-repeat; } }
+          background-image: url('logo.png');
+          padding-top: 150px;
+          background-size: 40px 28px;
+          background-position: 110px 60px;
+          background-repeat: no-repeat; } }
 
 h1,
 h2,
@@ -34,18 +36,22 @@ header.main {
   position: relative;
   width: 100%;
   padding-top: 0px;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
   color: #2f2f2f; }
   header.main .header-content {
-  width: 300px;
-  margin-left: -110px;
+  max-width: 800px;
   margin-bottom: 100px; }
     header.main .header-content h1 {
-      font-size: 18px; }
+      font-size: 18px;
+      margin: 15px; }
+      header.main .header-content h2, h3, p {
+      margin: 15px; }
+      header.main .header-content h5 {
+      margin-left: 15px; }
   header.main .device-container {
+    max-width: 325px;
     margin-right: auto;
-    margin-left: -200px;
-    max-width: 600px; }
+    margin-left: 2em; }
   @media (min-width: 992px) {
     header.main {
       height: 100vh;
@@ -57,10 +63,16 @@ header.main {
         margin-bottom: 50px;
         margin-left: 30px; }
         header.main .header-content h1 {
-          font-size: 30px; }
+          font-size: 30px;
+          margin: 0; }
+          header.main .header-content h2, h3, h5, p {
+          margin: 0; }
+          header.main .header-content h5 {
+          margin: 0; }
       header.main .device-container {
-        max-width: 400px;
-        margin-left: 0; } }
+        max-width: 325px;
+        margin-left: 3.2em; } }
+
 
 #view_listing a {
   background-color: goldenrod;
@@ -75,13 +87,13 @@ header.main {
   text-decoration: none; }
 
 .ticket-table {
-  width: 294px;
-  height: 250px;
+  width: 100%;
+  height: 260px;
   border-radius: 20px;
   box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.07);
   background-color: #ffffff;
   border: solid 1px #f3f3f3;
-  padding: 1.5em; }
+  padding: 1em; }
     @media (min-width: 992px) {
 .ticket-table {
   width: 346px;
@@ -93,12 +105,21 @@ header.main {
   padding: 1.5em; } }
 
 .box-img {
+  margin-left: 1em;
   height: 20px;
   width: 20px; }
 @media (min-width: 992px) {
 .box-img {
+  margin-top: 1em;
+  margin-left: 0;
   height: 25px;
   width: 25px; } }
+
+.device-img {
+  width: 90%; }
+@media (min-width: 992px) {
+.device-img {
+  width: 73%; } }
 
 #status {
   font-family: "Source Sans Pro", sans-serif;
@@ -120,60 +141,100 @@ header.main {
   background-color: #800000;
   color: silver; }
 
-  .btn-y {
-  background-color: #f9d021;
-  font-family: "Source Sans Pro", sans-serif;
-  border-radius: 18.7px;
-  border: 0;
-  color: white;
-}
+.btn-y {
+background-color: #f9d021;
+font-family: "Source Sans Pro", sans-serif;
+border-radius: 18.7px;
+border: 0;
+color: white;
+margin-top: -0.5em;
+margin-left: 2em; }
+@media (min-width: 992px) {
+      .btn-y {
+          background-color: #f9d021;
+          font-family: "Source Sans Pro", sans-serif;
+          border-radius: 18.7px;
+          border: 0;
+          color: white;
+          margin-top: 0;
+          margin-left: 0;
+        } }
+
 
 .btn-xl {
-  font-size: 16px;
-  padding: 8px 50px;
-  font-weight: 300;
-}
-@media (min-width: 992px) {
-.btn-xl {
-  font-size: 16px;
-  padding: 10px 100px;
-  font-weight: 300;
-} }
+font-size: 16px;
+padding: 8px 80px;
+font-weight: 300; }
+    @media (min-width: 992px) {
+    .btn-xl {
+      font-size: 16px;
+      padding: 10px 100px;
+      font-weight: 300;
+    } }
 
 dt, dd {
     display: inline;
 }
 dd {
     margin-left: 0em;
-    padding-left: 1ex;
+    padding-left: -1ex;
     padding-right: 1em;
 }
-@media (min-width: 992px) {
-dt, dd {
-    display: inline-block;
-}
-dd {
-    margin-left: 0em;
-    padding-left: 1ex;
-    padding-right: 1em;
-} }
+    @media (min-width: 992px) {
+        dt, dd {
+            display: inline-block;
+        }
+        dd {
+            margin-left: 0em;
+            padding-left: 1ex;
+            padding-right: 1em;
+        } }
+
 
 .purchase {
-  font-size: 30px;
-  font-weight: 300;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #2f2f2f;
-}
-@media (min-width: 992px) {
-.purchase {
-  font-size: 38px;
-  font-weight: 300;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #2f2f2f;
-} }
+font-size: 30px;
+font-weight: 300;
+font-style: normal;
+font-stretch: normal;
+line-height: normal;
+letter-spacing: normal;
+color: #2f2f2f; }
+    @media (min-width: 992px) {
+    .purchase {
+      font-size: 38px;
+      font-weight: 300;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      color: #2f2f2f;
+    } }
+
+.form-control-tx {
+display: block;
+width: 90%;
+padding: .375rem .75rem;
+margin: 15px;
+font-size: 1rem;
+line-height: 1.5;
+color: #495057;
+background-color: #f0f0f0;
+background-clip: padding-box;
+border: 1px solid #ced4da;
+border-radius: .25rem;
+transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out; }
+    @media (min-width: 992px) {
+        .form-control-tx {
+            display: block;
+            margin: 0;
+            width: 100%;
+            padding: .375rem .75rem;
+            font-size: 1rem;
+            line-height: 1.5;
+            color: #495057;
+            background-color: #f0f0f0;
+            background-clip: padding-box;
+            border: 1px solid #ced4da;
+            border-radius: .25rem;
+            transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+            } }
